# immich-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test-using-latest.yml
src/immich_sdk/: __init__.py  exception.py
src/immich_sdk/client/: __init__.py  _base.py  activity.py  album.py  api_key.py  asset.py  auth.py  auth_admin.py  database_backup.py  download.py  duplicate.py  face.py  job.py  library.py  maintenance.py  map_.py  memory.py  notification.py  oauth.py  partner.py  person.py  plugin.py  queue.py  search.py  server.py  shared_link.py  sync.py  system_config.py  system_metadata.py  tag.py  timeline.py  trash.py  user.py  user_admin.py  view.py  workflow.py
src/immich_sdk/models/: __init__.py  activity.py  album.py  api_key.py  asset.py  auth.py  common.py  database_backup.py  download.py  duplicate.py  face.py  job.py  library.py  maintenance.py  map_.py  memory.py  notification.py  oauth.py  partner.py  person.py  plugin.py  queue.py  search.py  server.py  shared_link.py  sync.py  system_config.py  system_metadata.py  tag.py  timeline.py  trash.py  user.py  user_admin.py  view.py  workflow.py
tests/: test_albums_client.py  test_base_client.py  test_search_client.py
