[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "wheel"]

[project]
dependencies = [
  "httpx>=0.28.1",
  "loguru>=0.7.3",
  "pydantic>=2.12.5",
  "pyright>=1.1.408",
  "tenacity>=9.1.2"
]
description = "immich-sdk based on the API-Spec"
license = {text = "MIT"}
name = "immich-sdk"
readme = "README.md"
requires-python = ">=3.13,<4"
version = "1.1.0"

[project.optional-dependencies]
dev = [
  "pip-tools>=6.12.2",
  "pre-commit>=2.20.0",
  "pytest-cov>=4.0.0",
  "pytest>=7.2.0"
]

[project.urls]
"Bug Tracker" = "https://github.com/bueckerlars/immich-sdk/issues"
"Homepage" = "https://github.com/bueckerlars/immich-sdk"

[tool.pyright]
exclude = [".venv", "alembic/versions", "tests"]
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "strict"
venvPath = ".venv"

[tool.pytest.ini_options]
addopts = "-ra --durations=10 --cov=src --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.setuptools.package-dir]
immich_sdk = "src/immich_sdk"

[tool.uv]
package = true
